# laCJC_ROS

./: .gitignore  README.md
CAO/: support tige gps.ipt  support tige voiture.ipt  support_caméra.ipt  tige GPS.ipt
CAO/OldVersions/: support tige gps.0005.ipt  support_caméra.0001.ipt
CAO/car_inventor/: 6661K11.ipt  Engrenage cylindrique11.ipt  Engrenage cylindrique21.ipt  Engrenages cylindriques1.iam  ISO 4762 - M4 x 25ISO.ipt  LICENSE.txt  M3x10.ipt  MicroServo9g v1_1.ipt  NOSILEC MOT.ipt  README.txt  arbre_arriere.ipt  attribution_card.html  barre_direction.ipt  boitier_central.ipt  boitier_central.stl  car_finale_1_10.iam  chassis.ipt  chassis_direction.ipt  chassis_direction.stl  ecrou-M4.ipt  ecrou_m3.ipt  ecrou_roue.ipt  entretoise_16.ipt  entretoise_43.2.ipt  entretoise_avant.ipt  goupille_2mm.ipt  moteur_Brushless_A2212 v1.ipt  roue_equipee.ipt  snr_624zz_1.ipt  support_arriere.ipt  support_moteur_Brushless_A2212 v1.ipt  support_moteur_Brushless_A2212 v1.stl  support_roue_avant_droite.ipt  support_roue_avant_gauche.ipt  train_avant_droit.iam  train_avant_gauche.iam  vis chc ISO4762 - M4 x 35.ipt  yoda_no_bullying.stl
CAO/car_inventor/OldVersions/: 6661K11.0001.ipt  Engrenage cylindrique11.0001.ipt  Engrenage cylindrique21.0001.ipt  Engrenages cylindriques1.0001.iam  ISO 4762 - M4 x 25ISO.0001.ipt  M3x10.0001.ipt  MicroServo9g v1_1.0001.ipt  NOSILEC MOT.0001.ipt  arbre_arriere.0001.ipt  barre_direction.0001.ipt  boitier_central.0001.ipt  car_finale_1_10.0003.iam  chassis.0001.ipt  chassis_direction.0001.ipt  ecrou-M4.0001.ipt  ecrou_m3.0001.ipt  ecrou_roue.0001.ipt  entretoise_16.0001.ipt  entretoise_43.2.0001.ipt  entretoise_avant.0001.ipt  goupille_2mm.0001.ipt  moteur_Brushless_A2212 v1.0001.ipt  roue_equipee.0001.ipt  snr_624zz_1.0001.ipt  support_arriere.0001.ipt  support_moteur_Brushless_A2212 v1.0001.ipt  support_roue_avant_droite.0001.ipt  support_roue_avant_gauche.0001.ipt  train_avant_droit.0001.iam  train_avant_gauche.0001.iam  vis chc ISO4762 - M4 x 35.0001.ipt
CAO/car_inventor/files/: Mini_Yoda.stl
Lane_Detection/: CMakeLists.txt  imgUtils.cpp  lane.cpp  lane.hpp  main.cpp  trash.txt
ROS_package/src/control/lanelib/: CMakeLists.txt  package.xml
ROS_package/src/control/lanelib/include/lanelib/: lane.hpp
ROS_package/src/control/lanelib/src/: imgUtils.cpp  lane.cpp
devel/: .catkin  .rosinstall
docs/: Analyse fonctionnelle.pptx  LaCJC_ROS.tex  rapport.tex
docs/corps/: abstract.tex  acronymes.tex  corps.tex
docs/rapport_final/: LaCJC_ROS.aux  LaCJC_ROS.dvi  LaCJC_ROS.out  LaCJC_ROS.tex  LaCJC_ROS.toc
docs/rapport_final/imgs/: arch_fg.xml
traitement_image/: CMakeLists.txt  imgUtils.h  main.cpp
vrep_simulation/: rc_car_control_ros.lua  rc_car_onboard_cam.lua  seance4_modele_realiste.ttt
vrep_simulation/piste_blinder/: piste.py  piste_tex.mtl
(+17 files in other folders)
